Sun, 28 Jan 2007 09:21:47 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py: Added mediatype flag for iPod nano 
          as suggested by José Luis Fustel (dr_psy terra.es) - thanks!
        * AUTHORS: Added JLF to list of patch writers
        * bin/gpodder: pushed release date + version

Wed, 24 Jan 2007 22:33:30 +0100 <thp@perli.net>
        * TODO: Updated TODO list

Wed, 24 Jan 2007 22:26:15 +0100 <thp@perli.net>
        * data/gpodder.desktop: Added Spanish translation for desktop file
        * data/po/es.po: Updated Spanish translation from José Luis

Tue, 23 Jan 2007 20:59:33 +0100 <thp@perli.net>
        * data/po/es.po: Spanish translation file from José Luis
          Fustel (dr_psy@terra.es) -- thanks!
        * setup.py: Added Spanish translation

Mon, 22 Jan 2007 13:15:11 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py: Fix based on a patch from Robert
          Young (robertkyoung gmail.com) to replace special characters 
          in channel folder name on MP3 player sync
        * AUTHORS: added Robert Young to list of patch writers

Mon, 22 Jan 2007 13:07:51 +0100 <thp@perli.net>
        * doc/dev/redhat-wget-output.txt: Added info about the modified 
          "wget" in RedHat/Fedora Core, based on Nick's mailing list 
          discussion thread of January 2007
        * src/gpodder/libwget.py: Applied slightly modified patch from 
          Nick (nikosapi gmail com) to add support for Fedora's custom 
          wget version so that the speed can be detected on Fedora Core 
          desktops (should also enable RHEL workstations)
        * bin/gpodder: version + rel.date

Wed, 17 Jan 2007 19:09:27 +0100 <thp@perli.net>
        * src/gpodder/libwget.py: Set transfer timeout to 15 seconds when 
          downloading with wget (thanks to Nick [nikosapi gmail com] again 
          for suggesting this and thanks for testing gPodder :)
        * bin/gpodder: version + release date bump :)
