@@ -1,3 +1,11 @@
+Sun, 28 Jan 2007 10:20:26 +0100 <thp@perli.net>
+        * src/gpodder/libipodsync.py: Fixed a small encoding warning
+        * data/gpodder.glade: Added color chooser tab in preferences
+        * src/gpodder/libgpodder.py: Added support for loading/saving 
+          episode list color values + default values
+        * src/gpodder/libpodcasts.py: Added support for color config
+        * src/gpodder/gpodder.py: Added support for episode list colors
+
 Sun, 28 Jan 2007 09:21:47 +0100 <thp@perli.net>
         * src/gpodder/libipodsync.py: Added mediatype flag for iPod nano 
           as suggested by José Luis Fustel (dr_psy terra.es) - thanks!
